[product-head] added scrollable on overflow header and fixed example

--- a/semcore/product-head/src/style/product-head.shadow.css
+++ b/semcore/product-head/src/style/product-head.shadow.css
@@ -12,6 +12,7 @@ SRow {
   justify-content: space-between;
   margin-top: 8px;
   margin-bottom: 8px;
+  overflow: auto;
 }
 
 SButtons {
